--- a/src/app/guest.css
+++ b/src/app/guest.css
@@ -1,23 +1,43 @@
 .guest-div {
-  line-height: 15px;
-  background-color: #fff;
-  text-align: left;
-  font-size: 15px;
-  margin: 5px 0 5px 0;
+  position: relative;
+  max-width: 700px;
+  min-width: 500px;
+  height: 50px;
+  border-radius: 25px;
+  margin: 10px 0;
+  border: 2px solid #f0f0f0;
+  background-color: white;
 }
 
 .guest-pic {
-  font-weight: bold;
-  background: #fff;
-  border: 1px solid #999;
+  height: 40px;
+  width: 40px;
   float: left;
-  margin-right: 10px;
-  padding: 0;
-  text-align: center;
-  height: 15px;
-  width: 15px;
+  margin: 2px 5px 0 2px;
+  background: white;
+  border-radius: 50%;
+  border: 3px solid #3184FF;
 }
 
 .guest-name {
-  
+  font-size: 30px;
+  line-height: 49px;
+  text-align: left;
+  color: #404040;
+}
+
+.guest-remove {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  top: 10px;
+  right: 10px;
+  text-align: center;
+  font-size: 15px;
+  background-color: #e11414;
+  color: white;
+  font-weight: bold;
+  border: none;
+  border-radius: 15px;
+  cursor: pointer;
 }
