--- a/src/app/guestform.css
+++ b/src/app/guestform.css
@@ -1,16 +1,22 @@
 .add-guest-text {
-  float: left;
-  margin-right: 5px;
-  margin-top: 2px;
+  margin-right: 15px;
+  width: 370px;
+  height: 30px;
+  border-radius: 8px;
+  border: 1px solid gray;
+  font-size: 30px;
 }
 
 .add-guest-button {
-  font-weight: bold;
-  background: #fff;
-  border: 1px solid #999;
-  padding: 0;
-  margin: 0;
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 10px 32px;
   text-align: center;
-  height: 18px;
-  width: 40px;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 5px;
 }
